--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -61,7 +61,29 @@
           <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can
             accomodate 2 people. It is located at the center of Shanghai
             and next to subway line 1, 1 stop to People Square, 2 stops
-            to Bund, and 3 stops to Jingan Temple.</div>
+            to Bund, and 3 stops to Jingan Temple.
+          </div>
+            <div class="amenities">
+              <h2>Amenities</h2>
+              <ul>
+                <li>TV</li>
+                <li>Wifi</li>
+                <li>Pet friendly</li>
+              </ul>
+            </div>
+            <div class="reviews">
+              <h2>Reviews</h2>
+              <ul>
+                  <li>
+                      <h3>From Bob Dylan the 27th January 2017</h3>
+                      <p>Runshi is an epic host. Nothing more I can say 5 star!</p>
+                  </li>
+                  <li>
+                    <h3>From Connor the 4th January 2017</h3>
+                    <p>Highly recommended!</p>
+                  </li>
+              </ul>
+            </div>
         </article>
 				<article><h2>Tiny house</h2>
           <div class="price_by_night">$65</div>
@@ -79,7 +101,30 @@
             & living room. The extra high ceilings makes the room feel
             more spacious. The sofa converts to a bed also. We have a
             handmade counter area that adds character, to the room and a
-            great porch/deck to relax on and have a glass of Merlot.</div>
+            great porch/deck to relax on and have a glass of Merlot.
+          </div>
+            <div class="amenities">
+              <h2>Amenities</h2>
+              <ul>
+                <li>Pet friendly</li>
+              </ul>
+            </div>
+            <div class="reviews">
+              <h2>Reviews</h2>
+              <ul>
+                  <li>
+                      <h3>From Max the 27th January 2017</h3>
+                      <p>
+                        Fantastic place. It was clean, Adrienne was great(even
+                        though we did not meet in person) and everything went super
+                        smooth. Location is also great if you like running and
+                        something a bit more quiet. I would suggest a car or take into
+                        consideration that you might have to Uber into city from
+                        the location Overall, would recommend the place at anytime.
+                      </p>
+                  </li>
+                </ul>
+            </div>
         </article>
 				<article><h2>A suite</h2>
           <div class="price_by_night">$190</div>
