--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -13,6 +13,9 @@
     <link rel="icon" type="image/png" href="./images/icon_group.png">
     <link rel="icon" type="image/png" href="./images/icon_bed.png">
     <link rel="icon" type="image/png" href="./images/icon_bath.png">
+    <link rel="icon" type="image/png" href="./images/icon_tv.png">
+    <link rel="icon" type="image/png" href="./images/icon_wifi.png">
+    <link rel="icon" type="image/png" href="./images/icon_pets.png">
 	</head>
 	<body>
 		<header></header>
@@ -66,9 +69,9 @@
             <div class="amenities">
               <h2>Amenities</h2>
               <ul>
-                <li>TV</li>
-                <li>Wifi</li>
-                <li>Pet friendly</li>
+                <li class="tv">TV</li>
+                <li class="wifi">Wifi</li>
+                <li class="pet-friendly">Pet friendly</li>
               </ul>
             </div>
             <div class="reviews">
@@ -106,7 +109,7 @@
             <div class="amenities">
               <h2>Amenities</h2>
               <ul>
-                <li>Pet friendly</li>
+                <li class="pet-friendly">Pet friendly</li>
               </ul>
             </div>
             <div class="reviews">
