--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -106,10 +106,17 @@
             <div class="number_bathrooms">1 Bathroom</div>
           </div><!-- end information -->
           <div class="user">
-            <p><b>Owner:</b> Addrienne</p>
+            <p><b>Owner:</b> Adrienne</p>
           </div><!-- end user -->
           <div class="description">
-            <p>Our place is a privete, afffordable satan-alone guest house centrally located just minutes to French Quarters, downtown th Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint, 400 suare ft. with a full bath, mini kitchen, & livin room. The extra high cellings make the home feel more spacious. The sofa converts to bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.</p>
+            <p>
+              Fantastic place. It was clean, Adrienne was great(even
+              though we did not meet in person) and everything went super
+              smooth. Location is also great if you like running and
+              something a bit more quiet. I would suggest a car or take into
+              consideration that you might have to Uber into city from
+              the location Overall, would recommend the place at anytime.
+            </p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
