Using Flexible boxes for all Place articles

--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/100-places.css">
+    <link rel="stylesheet" href="styles/101-places.css">
     <title>AirBnB clone</title>
   </head>
   <body>
@@ -63,7 +63,7 @@
             <p><b>Owner:</b> John Lennon</p>
           </div><!-- end user -->
           <div class="description">
-            <p>This is a lovely 1 bathroom apartment that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
+            <p>This is a lovely 1 bathroom apartament that can accommodate 2 people. It locates at the center of Shanghai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jungan Temle.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -109,14 +109,7 @@
             <p><b>Owner:</b> Adrienne</p>
           </div><!-- end user -->
           <div class="description">
-            <p>
-              Fantastic place. It was clean, Adrienne was great(even
-              though we did not meet in person) and everything went super
-              smooth. Location is also great if you like running and
-              something a bit more quiet. I would suggest a car or take into
-              consideration that you might have to Uber into city from
-              the location Overall, would recommend the place at anytime.
-            </p>
+            <p>Our place is a privete, affordable stand-alone guest house centrally located just minutes to French Quarters, downtown th Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint, 400 suare ft. with a full bath, mini kitchen, & livin room. The extra high cellings make the home feel more spacious. The sofa converts to bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.</p>
           </div><!-- end description -->
           <div class="amenities">
             <h2>Amenities</h2>
@@ -131,11 +124,11 @@
             <h2>1 Review</h2>
             <ul>
               <li>
-                <h3>From Max the 15th January 2024</h3>
-                <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
+                <h3>From Max the 27th January 2017</h3>
+                <p>Runshi is an epic host. Nothing more I can say. 5 star!</p>
               </li>
               <li>
-                <h3>From Ben Hanks the 4th January 2024</h3>
+                <h3>From Connor the 4th January 2017</h3>
                 <p>Higly recommended!</p>
               </li>
             </ul>
@@ -150,7 +143,7 @@
             <div class="number_bathrooms">2 Bathroom</div>
           </div><!-- end information -->
           <div class="user">
-            <p><b>Owner:</b> Mick Jagger</p>
+            <p><b>Owner:</b> Lewis Lymuel</p>
           </div><!-- end user -->
           <div class="description">
             <p>First loft built by Holbies. It contains a decked terrace, jacuzzi, firepit, rabbits garden, two rooms, two balconies, entrance gate, private garden, private parking, BBQ area, AC in each bedroom, technological equipment, luxury beds, and mountain views. Ideal for architecture lovers, romantic dates, or having a good time. It is a unique space of his kind. Only pets that do not harm rabbits are allowed.</p>
@@ -176,7 +169,7 @@
             <h2>1 Review</h2>
             <ul>
               <li>
-                <h3>From Idowu Abimbola the 15th February, 2024</h3>
+                <h3>From Dante Bravo the 13th August 2024</h3>
                 <p>I love this place. Amazing!</p>
               </li>
             </ul>
