Using Flexible boxes for all Place articles

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -176,7 +176,7 @@
             <h2>1 Review</h2>
             <ul>
               <li>
-                <h3>From Idowu Abimbola the 15th February, 2024</h3>
+                <h3>From Dante Bravo the 13th August 2024</h3>
                 <p>I love this place. Amazing!</p>
               </li>
             </ul>
