Improved the page by adding Accessibility support

--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -255,7 +255,7 @@
 
         <article><!-- My home -->
           <div class="article_places_header">
-            <h2>Otaku rooms</h2>
+            <h2>Punta Banco</h2>
             <div class="price_by_night">$79</div>
           </div>
           <div class="information">
@@ -290,11 +290,11 @@
             <h2>2 Reviews</h2>
             <ul>
               <li>
-                <h3>From Bob Dylan the 27th August 2022</h3>
+                <h3>From Bob Dylan the 27th January 2024</h3>
                 <p>Runshi is an epic host. Nothing more i can say. 5 star!</p>
               </li>
               <li>
-                <h3>From Connor 4th August 2022</h3>
+                <h3>From Connor 4th January 2024</h3>
                 <p>Higly recommended!</p>
               </li>
             </ul>
@@ -303,7 +303,7 @@
 
         <article><!-- My home -->
           <div class="article_places_header">
-            <h2>Donkey Kong Country</h2>
+            <h2>Berveley Hills</h2>
             <div class="price_by_night">$80</div>
           </div>
           <div class="information">
